
	* po/*: Add Finnish and Irish translations of the TP-robot, update
	the others with differentiated robot/coordinator addresses.

	* Makefile: Store the tp-robot.pot file among the po files, but
	let svn ignore it.

	* bin/po-register: Stop gettextizing messages to maintainers and
	team leaders when they get output in English only anyway.  Spare
	the translators of tp-robot some pointless work.

2007-06-20  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Stop gettextizing local progress and error
	messages.

	* Makefile: Include only the relevant files into the pot file.

	* bin/tp-robot, lib/run.py: Do not mark simple strings as
	non-gettextizable; there's no need.

	* lib/po.py: Make two header line a bit more accurate.

	* doc/index.html: Correct two paths.

	* ChangeLog: Tiny corrections.

2007-06-18  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/data.py, lib/editor.py, lib/htmlpage.py,
	lib/localweb.py, lib/po.py, lib/registry.py, lib/run.py,
	lib/sgml.py, lib/unpack.py, bin/po-tidy-links, web/html-to-cgi,
	web/to-html, web/registry.cgi.in:
	Make the line with "mode:" and "coding:" uniform.

	* Makefile: Exclude shell scripts and Makefile from globbing.

	* (Just about all files): Recode from ISO-8859-1 to UTF-8.

	* bin/po-register: Calculate the statistics as soon as a POT
	file is registered.

	* bin/po-register: Just break when moving the file fails: don't
	continue, don't send out mails.  Calculate the statistics before
	sending mails.  Tweak some messages.

	* lib/localweb.py, lib/po.py, lib/registry.py, lib/sgml.py,
	lib/run.py: Stop gettexttizing the local error messages: the TP
	programs aren't meant to be distributed to hundreds of users.

2007-06-17  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Don't use 'calc-postats' to put an entry
	into the statistics database, but plug it in directly.

	* bin/po-register: Ehm... no.  Forget about plugging it in
	directly -- it's too complicated.
